# neurons-that-panic

./: .gitignore  README.md  experiment.ipynb  pyproject.toml  run.py  sanity_checks.ipynb
src/: acts.py  adv.py  data.py  dn.py  model.py  patch.py  plot.py  utils.py
