[project]
name = "neurons-that-panic"
version = "0.1.0"
description = "Experimental pipeline for analyzing adversarial misgeneralization in Pythia-160M."
authors = [
  { name = "Akshath Mangudi" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "torch",
  "transformer_lens",
  "datasets",
  "numpy",
  "pandas",
  "matplotlib",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "ipython",
  "jupyter",
  "black",
  "ruff", 
  "isort"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [
    "*.ipynb",
    ".ipynb_checkpoints",
]
